<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/search_question" >

            <requestFocus />
        </EditText>

        <RadioGroup
            android:id="@+id/rgItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" >

            <RadioButton
                android:id="@+id/rbSearchByTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/search_by_title"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/rbSearchByContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_content"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/rbSearchByAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_by_author"
                android:textSize="26sp" />
        </RadioGroup>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/button1"
            android:text="Button" />

    </RelativeLayout>

</RelativeLayout>