<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txtBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/title_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtBookTitle"
        android:text="@string/author_txt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtBookDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtBookTitle"
        android:text="@string/date_txt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout1"
        android:layout_below="@+id/txtBookAuthor"
        android:layout_centerHorizontal="true" >

        <WebView
            android:id="@+id/WebViewBookContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:onClick="onBtnBackClick"
            android:text="@string/btn_back"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/ShareText"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@null"
            android:onClick="onShareTextClick"
            android:padding="10dp"
            android:src="@drawable/share" />

        <ImageView
            android:id="@+id/imgFavorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@null"
            android:onClick="onImgFavoriteClick"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/imgSee"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:clickable="true"
            android:contentDescription="@null"
            android:onClick="onImgSeeClick"
            android:padding="10dp"/>
    </LinearLayout>

</RelativeLayout>